# proxy-yoinker

./: .gitignore  Cargo.toml  readme.md  smthsmth
src/: config.rs  lib.rs  main.rs  models.rs  utils.rs
src/discovery/: extractor.rs  mod.rs  searcher.rs
src/io/: input.rs  mod.rs  output.rs
src/network/: checker.rs  fetcher.rs  mod.rs
src/parsers/: config_files.rs  generic.rs  mod.rs  proxy_urls.rs
